<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ec.edu.uce.dispmoviles.trabajo1hemi.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="#CCD1D1"
        app:srcCompat="@drawable/logouce" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/universidad"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="#CCD1D1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/facultad"
        android:textStyle="bold"
        android:background="#CCD1D1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCD1D1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/integrantes"
        android:textStyle="bold"
        android:background="#CCD1D1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/integrante1"
        android:gravity="center"
        android:background="#CCD1D1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/integrante2"
        android:gravity="center"
        android:background="#CCD1D1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/integrante3"
        android:gravity="center"
        android:background="#CCD1D1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/integrante4"
        android:gravity="center"
        android:background="#CCD1D1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/integrante5"
        android:gravity="center"
        android:background="#CCD1D1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCD1D1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#1B2631" />

    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCD1D1"/>

</LinearLayout>
